fix(documentation): overflowing content from scrollspy-nav
Add overflow-wrap: break-word to break long words if they expand beyond available
width of scrollspy-nav. This fixes issue with long words overflowing and expanding
beyond main content area of screen (we only want to have to vertically scroll; other
than scrolling over in embedded code examples.

--- a/projects/documentation/src/app/widgets/scrollspy-nav-layout/scrollspy-nav-layout.component.scss
+++ b/projects/documentation/src/app/widgets/scrollspy-nav-layout/scrollspy-nav-layout.component.scss
@@ -13,6 +13,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 64px;
+    overflow-wrap: break-word;
 }
 
 .scrollup-button {
